--- a/src/portfolio/index.html
+++ b/src/portfolio/index.html
@@ -10,38 +10,31 @@
   </head>
   <body id="card_body">
       <div class="card">
-      <div class="card_title">
-        <h1>Bienvenue sur mon site Portfolio</h1>
+        <div class="card_title">
+          <h1>Bienvenue sur mon site Portfolio</h1>
+        </div>
+        <div class="card_title">
+          <h1>✅ QUALITÉS</h1>
+        </div>
+        <div class="row">
+          <div class="card_qualities column" id="card_qualities_left">
+            <div>
+              <p>Analytique</p>
+              <p>Créatif</p>
+              <p>Fiable</p>
+              <p>Organisé</p>  
+            </div>
+          </div>
+          <div class="card_qualities column" id="card_qualities_right">
+            <div>
+              <div>Autonome</div>
+              <div>Curieux</div>
+              <div>Collaboratif</div>
+              <div>Adaptable</div>
+            </div>
+          </div>
       </div>
-      <div class="card_title">
-        <h1>✅ QUALITTÉES</h1>
-      </div>
-      <div class="card_qualities">
-        <div>
-          <div>Autonomne</div>
-        </div>
-        <div>
-          <div>Organisé</div>
-        </div>
-        <div>
-          <div>Respectueux</div>
-        </div>
-        <div>
-          <div>Responsable</div>
-        </div>
-      </div>
-      <div class="card_qualities">
-        <div>
-          <div>Créatif</div>
-        </div>
-        <div>
-          <div>Sociable</div>
-        </div>
-        <div>
-          <div>Débrouillard</div>
-        </div>
-      </div>
-      <div class="card_degrees">
+      <div class="card_degrees left">
         <div class="card_title">
           <h1>📜 FORMATIONS</h1>
         </div>
@@ -91,24 +84,6 @@
           <p>Les jeux-vidéos</p>
           <p>Nouvelles technologies</p>
           <p>Activités en général</p>
-      </div>
-
-      <div class="card_references">
-        <div class="card_title">
-          <h1>🙍‍♂️ REFÉRENCE </h1>
-        </div>
-        <p>
-          Jaser Maksuti
-        </p>
-        <p>
-          Chef infrastructure au Centre Hospitalier de Bienne
-        </p>
-        <p>
-          jaser.maksuti@szb-chb.ch
-        </p>
-        <p>
-          +41 32 324 15 80
-        </p>
       </div>
     <div class="card_buttons">
       <a id="github" href="https://github.com/KIINGOFKEBAB" target="_blank">
